fix text-align

--- a/css/style.css
+++ b/css/style.css
@@ -296,6 +296,7 @@ main {
     width: 80%;
     max-width: 600px;
     padding: 4rem;
+    text-align: left;
   }
 }
 .card h2 {
