--- a/scss/pages/_menus.scss
+++ b/scss/pages/_menus.scss
@@ -23,6 +23,7 @@
         width: 80%;
         max-width: 600px;
         padding: 4rem;
+        text-align: left;
     }
 
     h2{
